cbits/lattice_symmetries_haskell.h

typedef struct {
  void *elts;
  uint64_t num_elts;

  void *freer;
} chpl_external_array;
typedef struct ls_hs_scalar {
  double real;
  double imag;
} ls_hs_scalar;
typedef _Complex double ls_hs_scalar;
typedef struct ls_hs_permutation_group {
  _Atomic int refcount;
  int number_bits;
  int number_shifts;
  int number_masks;
  uint64_t *masks;
  uint64_t *shifts;
  double *eigvals_re;
  double *eigvals_im;
} ls_hs_permutation_group;
typedef struct ls_hs_basis {
  _Atomic int refcount;
  int number_sites;
  int number_particles;
  int number_up;
  ls_hs_particle_type particle_type;
  bool state_index_is_identity;
  bool requires_projection;
  ls_hs_basis_kernels *kernels;
  chpl_external_array representatives;
  void *haskell_payload;
} ls_hs_basis;
// }}}

typedef struct ls_internal_operator_kernel_data
    ls_internal_operator_kernel_data;
typedef struct ls_hs_nonbranching_terms {
  int number_terms;
  int number_bits;
  // number_words = ceil(number_bits / 64)
  ls_hs_scalar const *v; // array of shape [number_terms]
  uint64_t const *m;     // array of shape [number_terms, number_words]
  uint64_t const *l;     // array of shape [number_terms, number_words]
  uint64_t const *r;     // array of shape [number_terms, number_words]
  uint64_t const *x;     // array of shape [number_terms, number_words]
  uint64_t const *s;     // array of shape [number_terms, number_words]
  // all arrays are contiguous in row-major order
} ls_hs_nonbranching_terms;
typedef struct ls_hs_operator {
  _Atomic int refcount;
  ls_hs_basis const *basis;
  ls_hs_nonbranching_terms const *off_diag_terms;
  ls_hs_nonbranching_terms const *diag_terms;
  ls_internal_operator_kernel_data const *apply_off_diag_cxt;
  ls_internal_operator_kernel_data const *apply_diag_cxt;
  void *haskell_payload;
} ls_hs_operator;
typedef struct ls_hs_yaml_config {
  ls_hs_basis const *basis;
  ls_hs_operator const *hamiltonian;
  int number_observables;
  ls_hs_operator const *const *observables;
} ls_hs_yaml_config;
// void ls_hs_internal_block_binary_search(ptrdiff_t const block_size,
//                                         uint64_t const haystack[],
//                                         ptrdiff_t const haystack_size,
//                                         uint64_t const needles[],
//                                         ptrdiff_t indices[]);

// void ls_hs_internal_binary_search_x1(uint64_t const haystack[],
//                                      ptrdiff_t haystack_size,
//                                      uint64_t needle,
//                                      ptrdiff_t *index);

typedef struct ls_chpl_kernels {
  void (*enumerate_states)(ls_hs_basis const *, uint64_t, uint64_t,
                           chpl_external_array *);
  void (*operator_apply_off_diag)(ls_hs_operator *, int64_t, uint64_t *,
                                  chpl_external_array *, chpl_external_array *,
                                  chpl_external_array *, int64_t);
  void (*operator_apply_diag)(ls_hs_operator *, int64_t, uint64_t *,
                              chpl_external_array *, int64_t);
  void (*matrix_vector_product)(ls_hs_operator *, int, double const *,
                                double *);
} ls_chpl_kernels;
ls_chpl_kernels const *ls_hs_internal_get_chpl_kernels();
typedef struct ls_sparse_operator ls_sparse_operator;
typedef struct ls_hs_basis {
  ls_flat_spin_basis const *payload;
  void *context;
} ls_hs_basis;
typedef struct ls_hs_operator {
  ls_sparse_operator const *payload;
  void *context;
} ls_hs_operator;