src/LatticeSymmetries/FFI.hsc


operatorPeekParticleType :: Ptr Coperator -> IO Cparticle_type
operatorPeekParticleType p = #{peek ls_hs_operator, basis} p >>= basisPeekParticleType
{-# INLINE operatorPeekParticleType #-}

operatorPeekPayload :: Ptr Coperator -> IO (StablePtr a)
operatorPeekPayload p = #{peek ls_hs_operator, haskell_payload} p
{-# INLINE operatorPeekPayload #-}

operatorPokePayload :: Ptr Coperator -> StablePtr a -> IO ()
operatorPokePayload p x = #{poke ls_hs_operator, haskell_payload} p x
{-# INLINE operatorPokePayload #-}

operatorPeekNumberOffDiagTerms :: Ptr Coperator -> IO Int
operatorPeekNumberOffDiagTerms p = do
  termsPtr <- #{peek ls_hs_operator, off_diag_terms} p
  if termsPtr == nullPtr
    then pure 0
    else #{peek ls_hs_nonbranching_terms, number_terms} termsPtr
{-# INLINE operatorPeekNumberOffDiagTerms #-}

instance Storable Coperator where
  sizeOf _ = #{size ls_hs_operator}
  {-# INLINE sizeOf #-}
  alignment _ = #{alignment ls_hs_operator}
  {-# INLINE alignment #-}
  peek p =
    Coperator
      <$> peekRefCount (p `plusPtr` #{offset ls_hs_operator, refcount})
      <*> #{peek ls_hs_operator, basis} p
      <*> #{peek ls_hs_operator, off_diag_terms} p
      <*> #{peek ls_hs_operator, diag_terms} p
      <*> #{peek ls_hs_operator, apply_off_diag_cxt} p
      <*> #{peek ls_hs_operator, apply_diag_cxt} p
      <*> #{peek ls_hs_operator, haskell_payload} p
  {-# INLINE peek #-}
  poke p x = do
    _ <- pokeRefCount (p `plusPtr` #{offset ls_hs_operator, refcount}) (coperator_refcount x)
    #{poke ls_hs_operator, basis}               p (coperator_basis x)
    #{poke ls_hs_operator, off_diag_terms}      p (coperator_off_diag_terms x)
    #{poke ls_hs_operator, diag_terms}          p (coperator_diag_terms x)
    #{poke ls_hs_operator, apply_off_diag_cxt}  p (coperator_apply_off_diag_cxt x)
    #{poke ls_hs_operator, apply_diag_cxt}      p (coperator_apply_diag_cxt x)
    #{poke ls_hs_operator, haskell_payload}     p (coperator_haskell_payload x)
  {-# INLINE poke #-}

data {-# CTYPE "lattice_symmetries_haskell.h" "chpl_external_array" #-} Cexternal_array = Cexternal_array
  { external_array_elts :: !(Ptr ()),
    external_array_num_elts :: !Word64,
    external_array_freer :: !(Ptr ())
  }

emptyExternalArray :: Cexternal_array
emptyExternalArray = Cexternal_array nullPtr 0 nullPtr

instance Storable Cexternal_array where
  sizeOf _ = #{size chpl_external_array}
  {-# INLINE sizeOf #-}
  alignment _ = #{alignment chpl_external_array}
  {-# INLINE alignment #-}
  peek p =
    Cexternal_array
      <$> #{peek chpl_external_array, elts} p
      <*> #{peek chpl_external_array, num_elts} p
      <*> #{peek chpl_external_array, freer} p
  {-# INLINE peek #-}
  poke p x = do
    #{poke chpl_external_array, elts} p (external_array_elts x)
    #{poke chpl_external_array, num_elts} p (external_array_num_elts x)
    #{poke chpl_external_array, freer} p (external_array_freer x)
  {-# INLINE poke #-}

-- foreign import ccall unsafe "&ls_hs_internal_destroy_external_array"
--   ls_hs_internal_destroy_external_array :: FunPtr (Ptr Cexternal_array -> IO ())

data {-# CTYPE "lattice_symmetries_haskell.h" "ls_hs_permutation_group" #-} Cpermutation_group = Cpermutation_group
  { cpermutation_group_refcount :: {-# UNPACK #-} !CInt,
    cpermutation_group_number_bits :: {-# UNPACK #-} !CInt,
    cpermutation_group_number_shifts :: {-# UNPACK #-} !CInt,
    cpermutation_group_number_masks :: {-# UNPACK #-} !CInt,
    cpermutation_group_masks :: {-# UNPACK #-} !(Ptr Word64),
    cpermutation_group_shifts :: {-# UNPACK #-} !(Ptr Word64),
    cpermutation_group_eigvals_re :: {-# UNPACK #-} !(Ptr CDouble),
    cpermutation_group_eigvals_im :: {-# UNPACK #-} !(Ptr CDouble)
  }

instance Storable Cpermutation_group where
  sizeOf _ = #{size ls_hs_permutation_group}
  {-# INLINE sizeOf #-}
  alignment _ = #{alignment ls_hs_permutation_group}
  {-# INLINE alignment #-}
  peek p =
    Cpermutation_group
      <$> peekRefCount (p `plusPtr` #{offset ls_hs_permutation_group, refcount})
      <*> #{peek ls_hs_permutation_group, number_bits} p
      <*> #{peek ls_hs_permutation_group, number_shifts} p
      <*> #{peek ls_hs_permutation_group, number_masks} p
      <*> #{peek ls_hs_permutation_group, masks} p
      <*> #{peek ls_hs_permutation_group, shifts} p
      <*> #{peek ls_hs_permutation_group, eigvals_re} p
      <*> #{peek ls_hs_permutation_group, eigvals_im} p
  {-# INLINE peek #-}
  poke p x = do
    _ <- pokeRefCount (p `plusPtr` #{offset ls_hs_permutation_group, refcount}) (cpermutation_group_refcount x)
    #{poke ls_hs_permutation_group, number_bits}   p (cpermutation_group_number_bits x)
    #{poke ls_hs_permutation_group, number_shifts} p (cpermutation_group_number_shifts x)
    #{poke ls_hs_permutation_group, number_masks}  p (cpermutation_group_number_masks x)
    #{poke ls_hs_permutation_group, masks}         p (cpermutation_group_masks x)
    #{poke ls_hs_permutation_group, shifts}        p (cpermutation_group_shifts x)
    #{poke ls_hs_permutation_group, eigvals_re}    p (cpermutation_group_eigvals_re x)
    #{poke ls_hs_permutation_group, eigvals_im}    p (cpermutation_group_eigvals_im x)
  {-# INLINE poke #-}

data {-# CTYPE "lattice_symmetries_haskell.h" "ls_chpl_kernels" #-} Cchpl_kernels = Cchpl_kernels
  { cchpl_kernels_enumerate_states :: FunPtr (Cbasis -> Word64 -> Word64 -> Ptr Cexternal_array -> IO ())
  }

instance Storable Cchpl_kernels where
  sizeOf _ = #{size ls_chpl_kernels}
  {-# INLINE sizeOf #-}
  alignment _ = #{alignment ls_chpl_kernels}
  {-# INLINE alignment #-}
  peek p =
    Cchpl_kernels
      <$> #{peek ls_chpl_kernels, enumerate_states} p
  {-# INLINE peek #-}
  poke p x = do
    #{poke ls_chpl_kernels, enumerate_states} p (cchpl_kernels_enumerate_states x)
  {-# INLINE poke #-}

data {-# CTYPE "lattice_symmetries_haskell.h" "ls_hs_yaml_config" #-} Cyaml_config = Cyaml_config
  { cyaml_config_basis :: {-# UNPACK #-} !(Ptr Cbasis),
    cyaml_config_hamiltonian :: {-# UNPACK #-} !(Ptr Coperator),
    cyaml_config_number_observables :: {-# UNPACK #-} !CInt,
    cyaml_config_observables :: {-# UNPACK #-} !(Ptr (Ptr Coperator))
  }

instance Storable Cyaml_config where
  sizeOf _ = #{size ls_hs_yaml_config}
  {-# INLINE sizeOf #-}
  alignment _ = #{alignment ls_hs_yaml_config}
  {-# INLINE alignment #-}
  peek p =
    Cyaml_config
      <$> #{peek ls_hs_yaml_config, basis} p
      <*> #{peek ls_hs_yaml_config, hamiltonian} p
      <*> #{peek ls_hs_yaml_config, number_observables} p
      <*> #{peek ls_hs_yaml_config, observables} p
  {-# INLINE peek #-}
  poke p x = do
    #{poke ls_hs_yaml_config, basis}               p (cyaml_config_basis x)
    #{poke ls_hs_yaml_config, hamiltonian}         p (cyaml_config_hamiltonian x)
    #{poke ls_hs_yaml_config, number_observables}  p (cyaml_config_number_observables x)
    #{poke ls_hs_yaml_config, observables}         p (cyaml_config_observables x)
  {-# INLINE poke #-}

-- foreign import ccall unsafe "ls_hs_internal_get_chpl_kernels"
--   ls_hs_internal_get_chpl_kernels :: IO (Ptr Cchpl_kernels)
